# System-Integration_Hand-Ins

./: .gitignore
1._FileFormats/files/: example.csv  example.json  example.xml  example.yml
1._FileFormats/js/: main.js  package-lock.json  package.json
1._FileFormats/python/: main.py
2._DataFormatTranslations/files/: example.csv  example.json  example.xml  example.yml
2._DataFormatTranslations/node/: main.js  package-lock.json  package.json
2._DataFormatTranslations/python/: main.py  pyproject.toml
3._DateServers/node/: main.js  package.json
3._DateServers/python/: main.py  pyproject.toml
3._DateServers_Part1_&_Part2/node/: main.js
3._DateServers_Part1_&_Part2/python/: main.py  pyproject.toml
4._WebSockets/: main.js  package.json
4._WebSockets/public/: index.html
5._API_Documentation/files/: example.yml
5._API_Documentation/node/: main.js  package-lock.json  package.json  swagger.json
5._API_Documentation/node/api/swagger/: swagger.yaml
